fixed misaligned button

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ p {
   margin-top: 0;
 }
 
+section p {
+  height: 170px;
+}
+
 /* ELEMENTS */ 
 .container {
   display: flex;
@@ -72,9 +76,9 @@ section {
 button {
   background-color: hsl(0, 0%, 95%); 
   border-radius: 40px; 
-  height: 48px;
+  height: 50px;
   width: 147px; 
-  margin-top: 25%;
+  margin-top: 5%;
   border: 0;
   font-weight: 700
 }
